--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
         <title>Trebbl</title>
         <link rel="stylesheet" href="css/app.css" />
         <script src="bower_components/modernizr/modernizr.js"></script>
+
+        <!-- Fira Sans - Google Fonts -->
+        <link href='https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,400italic,700italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
         <section class="hero">
             <div class="row">
                 <div class="small-12 columns">
-                    <img class="hero__logo" data-interchange="[/img/top-logo.png, (default)], [/img/top-logo@2x.png, (retina)]" src="" alt="">
+                    <img class="hero__logo" data-interchange="[img/top-logo.png, (default)], [img/top-logo@2x.png, (retina)]" src="" alt="">
                     <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                 </div>-
             </div>
@@ -21,7 +24,7 @@
         <nav class="nav">
             <div class="row">
                 <div class="medium-4 columns">
-                    <img class="nav__logo" data-interchange="[/img/top-logo.png, (default)], [/img/top-logo@2x.png, (retina)]" src="" alt="">
+                    <img class="nav__logo" data-interchange="[img/top-logo.png, (default)], [img/top-logo@2x.png, (retina)]" src="" alt="">
                 </div>
                 <div class="medium-8">
                     <ul>
@@ -45,12 +48,12 @@
         <section class="feed text-center">
             <div class="row">
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[/img/discover-icon.png, (default)], [/img/discover-icon@2x.png, (retina)]" src="" alt="">
+                    <img class="" data-interchange="[img/discover-icon.png, (default)], [img/discover-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Your Direct Line To New Sounds</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
                 </div>
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[/img/feed.png, (default)], [/img/feed@2x.png, (retina)]" src="" alt="">
+                    <img class="" data-interchange="[img/feed.png, (default)], [img/feed@2x.png, (retina)]" src="" alt="">
                 </div>
             </div>
         </section>
@@ -58,10 +61,10 @@
         <section class="endorsement text-center">
             <div class="row">
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[/img/endorsement.png, (default)], [/img/endorsement@2x.png, (retina)]" src="" alt="">
+                    <img class="" data-interchange="[img/endorsement.png, (default)], [img/endorsement@2x.png, (retina)]" src="" alt="">
                 </div>
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[/img/endorsement-icon.png, (default)], [/img/endorsement-icon@2x.png, (retina)]" src="" alt="">
+                    <img class="" data-interchange="[img/endorsement-icon.png, (default)], [img/endorsement-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Your Direct Line To New Sounds</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
                 </div>
@@ -71,12 +74,12 @@
         <section class="share text-center">
             <div class="row">
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[/img/endorsement-icon.png, (default)], [/img/share-icon@2x.png, (retina)]" src="" alt="">
+                    <img class="" data-interchange="[img/endorsement-icon.png, (default)], [img/share-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Your Direct Line To New Sounds</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
                 </div>
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[/img/share.png, (default)], [/img/share@2x.png, (retina)]" src="" alt="">
+                    <img class="" data-interchange="[img/share.png, (default)], [img/share@2x.png, (retina)]" src="" alt="">
                 </div>
             </div>
         </section>
@@ -85,28 +88,28 @@
             <div class="row">
                 <div class="small-6 medium-3 columns">
                     <div class="testimonial">
-                        <img src="/img/dp.png" alt="">
+                        <img src="img/dp.png" alt="">
                         <p><span class="username">@samjdavis</span></p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
                     </div>
                 </div>
                 <div class="small-6 medium-3 columns">
                     <div class="testimonial">
-                        <img src="/img/dp.png" alt="">
+                        <img src="img/dp.png" alt="">
                         <p><span class="username">@samjdavis</span></p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
                     </div>
                 </div>
                 <div class="small-6 medium-3 columns">
                     <div class="testimonial">
-                        <img src="/img/dp.png" alt="">
+                        <img src="img/dp.png" alt="">
                         <p><span class="username">@samjdavis</span></p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
                     </div>
                 </div>
                 <div class="small-6 medium-3 columns">
                     <div class="testimonial">
-                        <img src="/img/dp.png" alt="">
+                        <img src="img/dp.png" alt="">
                         <p><span class="username">@samjdavis</span></p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
                     </div>
@@ -125,7 +128,7 @@
         <footer class="footer">
             <div class="row">
                 <div class="medium-4 columns">
-                    <img class="" data-interchange="[/img/footer-logo.png, (default)], [/img/footer-logo@2x.png, (retina)]" src="" alt="">
+                    <img class="" data-interchange="[img/footer-logo.png, (default)], [img/footer-logo@2x.png, (retina)]" src="" alt="">
                 </div>
                 <div class="medium-8 columns">
                     <ul>
