--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </head>
     <body>
 
-        <section class="hero">
+        <section class="hero text-right" style="background: url(img/hero-bg.jpg)">
             <div class="row">
-                <div class="small-12 columns">
+                <div class="small-6 push-6 columns">
                     <img class="hero__logo" data-interchange="[img/top-logo.png, (default)], [img/top-logo@2x.png, (retina)]" src="" alt="">
                     <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                </div>-
+                </div>
             </div>
         </section>
 
@@ -26,7 +26,7 @@
                 <div class="medium-4 columns">
                     <img class="nav__logo" data-interchange="[img/top-logo.png, (default)], [img/top-logo@2x.png, (retina)]" src="" alt="">
                 </div>
-                <div class="medium-8">
+                <div class="medium-8 columns right">
                     <ul>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Features</a></li>
@@ -35,6 +35,13 @@
                 </div>
             </div>
         </nav>
+    
+        <!-- Seperator -->
+        <div class="row">
+            <div class="large-12 columns">
+                <div class="seperator"></div>        
+            </div>
+        </div>
 
         <section class="about text-center">
             <div class="row">
