--- a/index.html
+++ b/index.html
@@ -45,76 +45,73 @@
 
         <section class="about text-center">
             <div class="row">
-                <div class="small-12 columns">
+                <div class="small-10 push-1 columns">
                     <h4>Lorem ipsum dolor sit amet</h4>
                     <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com-modo consequat.</p>
                 </div>
             </div>
         </section>
 
-        <section class="feed text-center">
+        <section class="feed text-center bg-red">
             <div class="row">
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[img/discover-icon.png, (default)], [img/discover-icon@2x.png, (retina)]" src="" alt="">
-                    <h2>Your Direct Line To New Sounds</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
+                    <div>
+                        <img class="section-icon" data-interchange="[img/discover-icon.png, (default)], [img/discover-icon@2x.png, (retina)]" src="" alt="">
+                        <h2>Your Direct Line To New Sounds</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
+                    </div>
                 </div>
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[img/feed.png, (default)], [img/feed@2x.png, (retina)]" src="" alt="">
+                    <img class="section-img" data-interchange="[img/feed.png, (default)], [img/feed@2x.png, (retina)]" src="" alt="">
                 </div>
             </div>
         </section>
 
-        <section class="endorsement text-center">
+        <section class="endorsement text-center bg-navy">
             <div class="row">
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[img/endorsement.png, (default)], [img/endorsement@2x.png, (retina)]" src="" alt="">
+                    <img class="section-img" data-interchange="[img/endorsement.png, (default)], [img/endorsement@2x.png, (retina)]" src="" alt="">
                 </div>
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[img/endorsement-icon.png, (default)], [img/endorsement-icon@2x.png, (retina)]" src="" alt="">
+                    <div>
+                    <img class="section-icon" data-interchange="[img/endorsement-icon.png, (default)], [img/endorsement-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Your Direct Line To New Sounds</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="share text-center">
+        <section class="share text-center" style="background: url(img/share-bg.jpg)">
             <div class="row">
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[img/endorsement-icon.png, (default)], [img/share-icon@2x.png, (retina)]" src="" alt="">
+                    <img class="section-icon" data-interchange="[img/endorsement-icon.png, (default)], [img/share-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Your Direct Line To New Sounds</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
                 </div>
                 <div class="medium-6 columns">
-                    <img class="" data-interchange="[img/share.png, (default)], [img/share@2x.png, (retina)]" src="" alt="">
+                    <img class="section-img" data-interchange="[img/share.png, (default)], [img/share@2x.png, (retina)]" src="" alt="">
                 </div>
             </div>
         </section>
 
         <section class="testimonials text-center">
             <div class="row">
-                <div class="small-6 medium-3 columns">
+                <div class="small-12 medium-4 columns">
                     <div class="testimonial">
                         <img src="img/dp.png" alt="">
                         <p><span class="username">@samjdavis</span></p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
                     </div>
                 </div>
-                <div class="small-6 medium-3 columns">
+                <div class="small-12 medium-4 columns">
                     <div class="testimonial">
                         <img src="img/dp.png" alt="">
                         <p><span class="username">@samjdavis</span></p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
                     </div>
                 </div>
-                <div class="small-6 medium-3 columns">
-                    <div class="testimonial">
-                        <img src="img/dp.png" alt="">
-                        <p><span class="username">@samjdavis</span></p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
-                    </div>
-                </div>
-                <div class="small-6 medium-3 columns">
+                <div class="hide-for-small small-6 medium-4 columns">
                     <div class="testimonial">
                         <img src="img/dp.png" alt="">
                         <p><span class="username">@samjdavis</span></p>
@@ -132,7 +129,7 @@
             </div>
         </section>
 
-        <footer class="footer">
+        <footer class="footer bg-navy">
             <div class="row">
                 <div class="medium-4 columns">
                     <img class="" data-interchange="[img/footer-logo.png, (default)], [img/footer-logo@2x.png, (retina)]" src="" alt="">
