--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
         </section>
 
-        <footer class="footer bg-navy">
+        <footer class="footer nav bg-navy">
             <div class="row">
                 <div class="medium-4 columns">
                     <img class="" data-interchange="[img/footer-logo.png, (default)], [img/footer-logo@2x.png, (retina)]" src="" alt="">
