--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <section class="hero text-right" style="background: url(img/hero-bg.jpg)">
             <div class="row">
-                <div class="small-6 push-6 columns">
+                <div class="small-12 medium-12 large-8 large-offset-4 columns">
                     <img class="hero__logo" data-interchange="[img/top-logo.png, (default)], [img/top-logo@2x.png, (retina)]" src="" alt="">
                     <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                 </div>
@@ -23,10 +23,10 @@
 
         <nav class="nav">
             <div class="row">
-                <div class="medium-4 columns">
+                <div class="large-4 columns show-for-large-up">
                     <img class="nav__logo" data-interchange="[img/top-logo.png, (default)], [img/top-logo@2x.png, (retina)]" src="" alt="">
                 </div>
-                <div class="medium-8 columns right">
+                <div class="medium-12 large-8 columns nav-aligner">
                     <ul>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Features</a></li>
@@ -45,7 +45,7 @@
 
         <section class="about text-center">
             <div class="row">
-                <div class="small-10 push-1 columns">
+                <div class="small-12 medium-10 medium-offset-1 columns">
                     <h4>Lorem ipsum dolor sit amet</h4>
                     <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com-modo consequat.</p>
                 </div>
