style footer for mobile appropriately

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <div>
                         <img class="section-icon" data-interchange="[img/discover-icon.png, (default)], [img/discover-icon@2x.png, (retina)]" src="" alt="">
                         <h2>Your Direct Line To New Sounds</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
+                        <p class="show-for-large-up">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
                     </div>
                 </div>
-                <div class="medium-6 columns">
+                <div class="medium-6 large-5 large-offset-1 columns">
                     <img class="section-img" data-interchange="[img/feed.png, (default)], [img/feed@2x.png, (retina)]" src="" alt="">
                 </div>
             </div>
@@ -69,15 +69,15 @@
 
         <section class="endorsement text-center bg-navy">
             <div class="row">
-                <div class="medium-6 columns">
-                    <img class="section-img" data-interchange="[img/endorsement.png, (default)], [img/endorsement@2x.png, (retina)]" src="" alt="">
-                </div>
-                <div class="medium-6 columns">
+                <div class="medium-6 medium-push-6 columns">
                     <div>
                     <img class="section-icon" data-interchange="[img/endorsement-icon.png, (default)], [img/endorsement-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Your Direct Line To New Sounds</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
+                    <p class="show-for-large-up">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
                     </div>
+                </div>
+                <div class="medium-6 medium-pull-6 columns">
+                    <img class="section-img" data-interchange="[img/endorsement.png, (default)], [img/endorsement@2x.png, (retina)]" src="" alt="">
                 </div>
             </div>
         </section>
@@ -87,7 +87,7 @@
                 <div class="medium-6 columns">
                     <img class="section-icon" data-interchange="[img/endorsement-icon.png, (default)], [img/share-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Your Direct Line To New Sounds</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
+                    <p class="show-for-large-up">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
                 </div>
                 <div class="medium-6 columns">
                     <img class="section-img" data-interchange="[img/share.png, (default)], [img/share@2x.png, (retina)]" src="" alt="">
@@ -132,7 +132,7 @@
         <footer class="footer nav bg-navy">
             <div class="row">
                 <div class="medium-4 columns">
-                    <img class="" data-interchange="[img/footer-logo.png, (default)], [img/footer-logo@2x.png, (retina)]" src="" alt="">
+                    <img class="footer__logo" data-interchange="[img/footer-logo.png, (default)], [img/footer-logo@2x.png, (retina)]" src="" alt="">
                 </div>
                 <div class="medium-8 columns">
                     <ul>
