finish footer and contact form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <section class="hero text-right" style="background: url(img/hero-bg.jpg)">
             <div class="row">
-                <div class="small-12 medium-12 large-8 large-offset-4 columns">
+                <div class="small-10 small-offset-1 large-8 large-offset-4 columns">
                     <img class="hero__logo" data-interchange="[img/top-logo.png, (default)], [img/top-logo@2x.png, (retina)]" src="" alt="">
                     <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                 </div>
@@ -121,13 +121,26 @@
             </div>
         </section>
 
-        <section class="contact">
+        <section class="contact bg-navy">
             <div class="row">
-                <div class="small-12 columns">
-                    
+                <div class="small-12 medium-10 medium-offset-1 large-8 large-offset-2 columns">
+                    <form action="">
+                        <h5 class="text-white text-center show-for-small">Enter your email to be notified when Trebbl is available</h5>
+                        <input id="email-input" type="email" placeholder="Enter your email to be notified when Trebbl is available">
+                        <input id="submit" type="submit">
+                    </form>
                 </div>
             </div>
         </section>
+
+        <!-- Seperator -->
+        <div class="seperator-wrapper bg-navy">
+            <div class="row">
+                <div class="large-12 columns">
+                    <div class="seperator bg-white"></div>        
+                </div>
+            </div>
+        </div>
 
         <footer class="footer nav bg-navy">
             <div class="row">
