fill in all content

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <!-- Scrollto.js -->
         <script src="//cdn.jsdelivr.net/jquery.scrollto/2.1.0/jquery.scrollTo.min.js"></script>
 
+        <!-- FontAwesome -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
     </head>
     <body id="page-top">
 
@@ -78,7 +81,7 @@
                     <div>
                     <img class="section-icon" data-interchange="[img/endorsement-icon.png, (default)], [img/endorsement-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Discover the tastes of those closest to you</h2>
-                    <p class="show-for-large-up">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
+                    <p class="show-for-large-up">Endorse the music you love so that it can get the recognition it deserves. Browse this section of the app to find real time charts that have been curated by your friends and loved ones.</p>
                     </div>
                 </div>
                 <div class="medium-6 medium-pull-6 columns">
@@ -92,7 +95,7 @@
                 <div class="medium-6 columns">
                     <img class="section-icon" data-interchange="[img/endorsement-icon.png, (default)], [img/share-icon@2x.png, (retina)]" src="" alt="">
                     <h2>Share the soundtrack to your life</h2>
-                    <p class="show-for-large-up">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aperiam a odit doloribus ducimus nam soluta, debitis fugiat quisquam quaerat.</p>
+                    <p class="show-for-large-up">Share you musical tastes with the world around you. Select a portion of any song (up to 15 seconds) then post it into the world, where it can receive likes, comments and endorsements.</p>
                 </div>
                 <div class="medium-6 columns">
                     <img class="section-img" data-interchange="[img/share.png, (default)], [img/share@2x.png, (retina)]" src="" alt="">
@@ -106,26 +109,29 @@
                     <h4>What people are saying about Trebbl</h4>
                 </div>
             </div>
-            <div class="row">
-                <div class="small-12 medium-6 large-4 columns">
-                    <div class="testimonial">
-                        <img src="https://pbs.twimg.com/profile_images/560012435449319425/wWBClvkN.jpeg" alt="">
-                        <p class="username">@samjdavis</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
+            <div class="row" data-equalizer>
+                <div class="testimonial-holder small-12 medium-6 large-4 columns">
+                    <div class="testimonial data-equalizer-watch">
+                        <img src="https://pbs.twimg.com/profile_images/378800000483764274/ebce94fb34c055f3dc238627a576d251_400x400.jpeg" alt="">
+                        <p class="username">Tim Cook</p>
+                        <p class="job-title">CEO Apple Inc</p>
+                        <p>Trebbl is an app that I can really see revolutionising the music industry, like iTunes all over again. </p>
                     </div>
                 </div>
-                <div class="hide-for-small small-12 medium-6 large-4 columns">
-                    <div class="testimonial">
-                        <img src="https://pbs.twimg.com/profile_images/560012435449319425/wWBClvkN.jpeg" alt="">
-                        <p class="username">@samjdavis</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
+                <div class="testimonial-holder small-12 medium-6 large-4 columns">
+                    <div class="testimonial data-equalizer-watch">
+                        <img src="https://pbs.twimg.com/profile_images/3065313266/7d563f0c22918aba2d6be2eaa9fb92a7_400x400.png" alt="">
+                        <p class="username">John Gruber</p>
+                        <p class="job-title">Technology Journalist</p>
+                        <p>This app looks fantastic, I appreciate that the typeface used includes real smallcaps.</p>
                     </div>
                 </div>
-                <div class="hide-for-medium hide-for-small small-6 large-4 columns">
-                    <div class="testimonial">
-                        <img src="https://pbs.twimg.com/profile_images/560012435449319425/wWBClvkN.jpeg" alt="">
-                        <p class="username">@samjdavis</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur maiores, sunt vitae, ipsa laborum ratione?</p>
+                <div class="testimonial-holder hide-for-medium hide-for-small small-6 large-4 columns">
+                    <div class="testimonial data-equalizer-watch">
+                        <img src="https://pbs.twimg.com/profile_images/1282173124/untitled-158-2_400x400.jpg" alt="">
+                        <p class="username">Marco Arment</p>
+                        <p class="job-title">Devout Phish Fan</p>
+                        <p>Good app: <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><br> would be 5 stars, but needs more Phish.</p>
                     </div>
                 </div>
             </div>
