add form interaction

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="small-12 medium-10 medium-offset-1 columns">
                     <h4>What is Trebbl?</h4>
-                    <p>Trebbl does three simple things, extremely well<br>Discover fresh and interesting music by browsing snippets of what your friends are listening to. Share you musical tastes with the world around you. Endorse the music you love so that it can get the recognition it deserves.</p>
+                    <p>Trebbl does three simple things, extremely well.<br>Discover fresh and interesting music by browsing snippets of what your friends are listening to. Share you musical tastes with the world around you. Endorse the music you love so that it can get the recognition it deserves.</p>
                 </div>
             </div>
         </section>
@@ -140,9 +140,9 @@
         <section class="contact bg-navy" id="contact">
             <div class="row">
                 <div class="small-12 medium-10 medium-offset-1 large-8 large-offset-2 columns">
-                    <form action="">
+                    <form action="http://samjdavis.com/trebbl-contact/" method="post">
                         <h5 class="text-white text-center show-for-small">Enter your email to be notified when Trebbl is available</h5>
-                        <input id="email-input" type="email" placeholder="Enter your email to be notified when Trebbl is available">
+                        <input id="email-input" type="email" placeholder="Enter your email to be notified when Trebbl is available" name="email">
                         <input id="submit" type="submit">
                     </form>
                 </div>
