final changes before submission

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <section class="hero" style="background: url(img/hero-bg.jpg)">
             <div class="row">
-                <div class="small-10 small-offset-1 large-8 large-offset-0 columns">
+                <div class="small-10 small-offset-1 large-10 large-offset-1 xlarge-12 xlarge-offset-0 columns">
                     <a href="#page-top"><img class="hero__logo" data-interchange="[img/top-logo.png, (default)], [img/top-logo@2x.png, (retina)]" src="" alt=""></a>
-                    <p class="hero__text">Opening up the wide and diverse world of music to anyone who is willing to listen</p>
-                    <img class="appstore-icon" src="img/appstore.svg" alt="">
+                    <p class="hero__text">Opening the wide and diverse world of music to anyone who is willing to listen.</p>
+                    <a href="https://app.pixate.com/p4f7fae2295a8" target="_blank"><img class="appstore-icon" src="img/appstore.svg" alt=""></a>
                 </div>
             </div>
         </section>
@@ -109,9 +109,9 @@
                     <h4>What people are saying about Trebbl</h4>
                 </div>
             </div>
-            <div class="row" data-equalizer>
+            <div class="row" data-equalizer="endorsements">
                 <div class="testimonial-holder small-12 medium-6 large-4 columns">
-                    <div class="testimonial data-equalizer-watch">
+                    <div class="testimonial" data-equalizer-watch="endorsements">
                         <img src="https://pbs.twimg.com/profile_images/378800000483764274/ebce94fb34c055f3dc238627a576d251_400x400.jpeg" alt="">
                         <p class="username">Tim Cook</p>
                         <p class="job-title">CEO Apple Inc</p>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="testimonial-holder small-12 medium-6 large-4 columns">
-                    <div class="testimonial data-equalizer-watch">
+                    <div class="testimonial" data-equalizer-watch="endorsements">
                         <img src="https://pbs.twimg.com/profile_images/3065313266/7d563f0c22918aba2d6be2eaa9fb92a7_400x400.png" alt="">
                         <p class="username">John Gruber</p>
                         <p class="job-title">Technology Journalist</p>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="testimonial-holder hide-for-medium hide-for-small small-6 large-4 columns">
-                    <div class="testimonial data-equalizer-watch">
+                    <div class="testimonial" data-equalizer-watch="endorsements">
                         <img src="https://pbs.twimg.com/profile_images/1282173124/untitled-158-2_400x400.jpg" alt="">
                         <p class="username">Marco Arment</p>
                         <p class="job-title">Devout Phish Fan</p>
