--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Trebbl</title>
+        <title>Trebbl | An App for Music Discovery</title>
         <link rel="stylesheet" href="css/app.css" />
+
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+
         <script src="bower_components/modernizr/modernizr.js"></script>
 
         <!-- Fira Sans - Google Fonts -->
