--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="small-12 medium-10 medium-offset-1 columns">
                     <h4>What is Trebbl?</h4>
-                    <p>Trebbl does three simple things, extremely well.<br>Discover fresh and interesting music by browsing snippets of what your friends are listening to. Share you musical tastes with the world around you. Endorse the music you love so that it can get the recognition it deserves.</p>
+                    <p>Trebbl does three simple things, extremely well.<br>Discover fresh and interesting music by browsing snippets of what your friends are listening to. Share your musical tastes with the world around you. Endorse the music you love so that it can get the recognition it deserves.</p>
                 </div>
             </div>
         </section>
